<resources>
    <!-- Los strings -->
    <string name="nombre_Programa">Prestamo Almonte</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="administrar_usuario">Administrar Usuario</string>
    <string name="crear_prestamo">Crear Nueva Prestamo</string>
    <string name="renovar_prestamo">Renovar Prestamo</string>
    <string name="routinas">Routinas</string>
    <string name="facturas">Facturas</string>
    <string name="crear_cliente">Crear Nueva Cliente</string>
    <string name="lista_cliente">Lista Cliente</string>
    <string name="lista_prestamo">Lista Prestamo</string>
    <string name="inicio">Inicio</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="Santiago">Santiago</string>
    <string name="Puerto_Plata">Puerto-Plata</string>
    <string name="Moca">Moca</string>
    <string name="Licey">Licey</string>

    <string name="GET_ALL_ROUTINE_LOANS">http://178.128.144.72/api/loan/get/routine</string>
    <string name="URL_GET_PLANS">http://178.128.144.72/api/plan</string>
    <string name="URL_GET_CLIENTS">http://178.128.144.72/api/client</string>
    <string name="URL_GET_LOANS_BY_CLIENT">http://178.128.144.72/api/loan/client</string>
    <string name="URL_GET_LOAN_IDLOAN">http://178.128.144.72/api/loan</string>
    <string name="URL_SET_CLIENT_LOAN">http://178.128.144.72/api/clientwloan</string>
    <string name="URL_SET_LOANS">http://178.128.144.72/api/loan</string>
    <string name="URL_SET_DUES">http://178.128.144.72/api/loan/due</string>
    <string name="URL_GET_USERS">http://178.128.144.72/api/user</string>
    <string name="URL_CHECK_AUTH">http://178.128.144.72/api/auth</string>

    <!-- Styles -->
    <style name="Botones" parent="">
        <item name="android:layout_margin">10dp</item>
        <item name="android:gravity">center</item>
        <item name="android:textSize">16sp</item>
        <item name="android:background">#4CAF50</item>
    </style>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="monto_prestamo">Monto Prestamo</string>
    <string name="planes">Planes</string>


</resources>
